--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
-DATABASE_NAME=auction-house
+DATABASE_NAME=auction-house2
 DATABASE_USERNAME=dylan
 DATABASE_PASSWORD=wong
+DATABASE_PORT=5432
+PORT=4000
+SECRET=asdfakjsdhfakjdsfhkjasdfhk
+CORS_ORIGIN=http://localhost:3000
+DATABASE_URL=postgresql://dylan:wong@localhost:5432/auction-house2
