--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
    "scripts": {
       "watch": "tsc -w",
       "dev": "nodemon dist/index.js",
-      "start": "ts-node src/index.ts"
+      "build": "tsc"
    },
    "keywords": [],
    "author": "",
@@ -17,9 +17,8 @@
       "@types/validator": "^13.1.3",
       "dotenv": "^8.2.0",
       "nodemon": "^2.0.7",
-      "type-graphql": "^1.1.1",
-      "typescript": "3.3.3333",
-      "ts-node": "3.3.0"
+      "ts-node": "3.3.0",
+      "type-graphql": "^1.1.1"
    },
    "dependencies": {
       "@types/express-session": "^1.17.3",
@@ -39,6 +38,7 @@
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.10",
       "subscriptions-transport-ws": "^0.9.18",
-      "typeorm": "0.2.31"
+      "typeorm": "0.2.31",
+      "typescript": "^4.1.5"
    }
 }
